@@ -7,9 +7,6 @@ use Test::DZil;
 use Test::Fatal;
 use Path::Tiny;
 
-plan skip_all => 'This test is only useful for Dist::Zilla versions before 5.022'
-    if eval { require Dist::Zilla::Plugin::MakeMaker; Dist::Zilla::Plugin::MakeMaker->VERSION('5.022'); 1 };
-
 use Test::File::ShareDir
     -share => { -module => { 'Dist::Zilla::Plugin::DynamicPrereqs' => 'share/DynamicPrereqs' } };
 
@@ -27,7 +24,6 @@ my $tzil = Builder->from_config(
                         ],
                     },
                 ],
-                [ MakeMaker => ],
             ),
             path(qw(source lib Foo.pm)) => "package Foo;\n1;\n",
         },
@@ -37,12 +33,10 @@ my $tzil = Builder->from_config(
 $tzil->chrome->logger->set_debug(1);
 like(
     exception { $tzil->build },
-    # as of Dist::Zilla 5.016, Makefile.PL is not created until [MakeMaker]
-    # runs its setup_installer, so we will fail to find a file to munge. If
-    # https://github.com/rjbs/Dist-Zilla/pull/229 ever gets merged, we will be
-    # able to find a Makefile.PL but not find the adjacent code for munging.
-    qr/(No Makefile.PL found!|failed to find position in Makefile.PL to munge!)/,
-    'build aborts due to bad plugin ordering',
+    # before Dist::Zilla 5.022, Makefile.PL is not created until [MakeMaker]
+    # runs its setup_installer, so we will fail to find a file to munge.
+    qr/No Makefile.PL found!/,
+    'build aborts due to Makefile.PL not existing at the expected phase',
 ) or diag 'got log messages: ', explain $tzil->log_messages;
 
 diag 'got log messages: ', explain $tzil->log_messages
