@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs
 
 {{$NEXT}}
+          - fix test that was written assuming older MakeMaker behaviour
 
 0.021     2016-03-16 20:50:11Z (TRIAL RELEASE)
           - optimize use of blank lines in modified Makefile.PL content
